# CareSync-AI

./: .gitignore  EVALS.md  PROCESS.md  README.md  TRADEOFFS.md  dashboard.py  pyproject.toml  requirements.txt
bundle_builder/: ab_test.py  aov.py  bundle_generator.py  conversion.py  dataset.py  evaluation.py  llm_layer.py  main.py  ranking.py  retrieval.py
